# learn-dev

./: .gitignore  .readthedocs.yaml  0_prologue.ipynb  AR_typing.ipynb  README.md  extra_text.ipynb  pyproject.toml  pyrightconfig.json
docs/: 0_basics.nblink  0_preliminaries.nblink  0_prologue.nblink  0_top_tips.nblink  1_classes.nblink  1_preliminaries.nblink  2_classes.nblink  2_interfaces.nblink  3_interfaces.nblink  4_functional.nblink  5_refactoring.nblink  6_writing_new_code.nblink  7_jupyter_notebooks.nblink  8_testing.nblink  AR_IDE_setup.nblink  AR_documentation.nblink  AR_typing.nblink  IDE_setup.nblink  conf.py  documentation.nblink  epilogue.nblink  glossary.nblink  index.rst  jax.nblink  prologue.nblink  typing.nblink
notebooks/: 0_basics.ipynb  0_preliminaries.ipynb  0_prologue.ipynb  0_top_tips.ipynb  1_classes.ipynb  1_preliminaries.ipynb  2_classes.ipynb  2_interfaces.ipynb  3_interfaces.ipynb  4_functional.ipynb  5_refactoring.ipynb  6_writing_new_code.ipynb  7_jupyter_notebooks.ipynb  8_testing.ipynb  AR_IDE_setup.ipynb  AR_documentation.ipynb  AR_typing.ipynb  X_jupyter.ipynb  epilogue.ipynb  glossary.ipynb  prologue.ipynb
notebooks/additional_reading/: IDE_setup.ipynb  documentation.ipynb  typing.ipynb
notebooks/bonus/: jax.ipynb
