[project]
name = "learn-dev"
version = "0.1.0"
description = "Principles of software development for scientists and researchers"
authors = [
    {name = "Dan J Bower", email = "dbower@eaps.ethz.ch"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "ipykernel>=6.29.5"
]

[project.optional-dependencies]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx<=8.2",
    "setuptools>=80.9.0",
    "doc8>=2.0.0",
    "nbsphinx>=0.9.7",
    "pypandoc>=1.15",
    "nbsphinx-link>=1.3.1",
]