[project]
name = "learn-dev"
version = "0.1.0"
description = "Build better software"
authors = [
    {name = "Dan J Bower", email = "dbower@eaps.ethz.ch"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "ipykernel>=6.30.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx<=8.2.3",
    "setuptools>=80.9.0",
    "doc8>=2.0.0",
    "nbsphinx>=0.9.7",
    "pypandoc>=1.15",
    "nbsphinx-link>=1.3.1",
]
